# medium_leaderboard

./: .env  .gitignore  Cargo.toml  Dioxus.toml  Shuttle.toml  body.txt  diesel.toml  open_dev.bat  open_with_vars.bat  query_response.json  set_vars.bat  shuttle_postbuild.sh  shuttle_prebuild.sh  shuttle_setup_container.sh
assets/: database.db
assets/scripts/: 98b204fec6.js
migrations/2024-12-16-162217_create_submissions/: down.sql  up.sql
migrations/2024-12-19-234227_create_submissions/: down.sql  up.sql
migrations/2024-12-21-201735_create_clap_history/: down.sql  up.sql
migrations/2025-01-01-163130_add_submission_category_column/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  server_functions.rs
src/components/: app.rs  card.rs  clap_chart.rs  config_info_table.rs  hero.rs  leaderboard_table.rs  mod.rs  navbar.rs
src/db/: db.rs  mod.rs
src/models/: clap_history.rs  clap_history_model.rs  mod.rs  submission.rs  submission_model.rs
src/server/: mod.rs
src/server/graphql/: clap_count_query.rs  mod.rs  story_details_query.rs
