[package]
name = "medium_leaderboard"
version = "0.1.0"
authors = ["Simon Jung <simonjung1603@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
axum = {version = "0.7.0", optional = true}
tokio = {version = "1.42.0", features = ["full"], optional = true}
dioxus-cli-config = {version = "*", optional = true}
reqwest = { version = "0.12.9", features = ["json"] }
rss = "2.0.11"
anyhow = "1.0.94"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"], optional = true }
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
shuttle-runtime = {version = "0.49.0", optional = true}

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dioxus-cli-config", "dep:diesel", "dep:shuttle-runtime"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
