[package]
name = "medium_leaderboard"
version = "0.1.0"
authors = ["Simon Jung <simonjung1603@gmail.com>"]
edition = "2021"

[[bin]]
name = "medium_leaderboard"
path = "src/bin/shuttle.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
axum = { version = "0.7.0", optional = true }
tokio = { version = "1.42.0", features = ["full"], optional = true }
dioxus-cli-config = { version = "*", optional = true }
reqwest = { version = "0.12.9", features = ["json"] }
rss = "2.0.11"
anyhow = "1.0.94"
diesel = { version = "2.1.1", features = ["postgres_backend", "r2d2", "postgres", "chrono"], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
shuttle-runtime = { version = "0.49.0", optional = true }
shuttle-axum = { version = "0.49.0", optional = true }
shuttle-shared-db = { version = "0.49.0", features = ["postgres"], optional = true }
copy_dir = { version = "0.1.3", optional = true }
chrono = { version = "0.4.39", features = ["serde"] }

[features]
default = ["server"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dioxus-cli-config", "dep:diesel", "dep:shuttle-runtime",
    "dep:shuttle-axum", "dep:shuttle-shared-db", "dep:diesel_migrations", "dep:copy_dir"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
