[package]
name = "medium_leaderboard"
version = "0.1.0"
authors = ["Simon Jung <simonjung1603@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Shared
anyhow = { version = "1.0.94" }
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["fullstack"] }
serde = { version = "1.0.216", features = ["derive"] }

# Server dependencies
axum = { version = "0.7.0", optional = true }
copy_dir = { version = "0.1.3", optional = true }
diesel = { version = "2.1.1", features = ["postgres_backend", "r2d2", "postgres", "chrono"], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
dioxus-cli-config = { version = "*", optional = true }
dotenvy = { version = "0.15.7", optional = true }
reqwest = { version = "0.12.9", features = ["json"], optional = true }
rss = { version = "2.0.11", optional = true }
shuttle-axum = { version = "0.49.0", optional = true }
shuttle-runtime = { version = "0.49.0", optional = true }
shuttle-shared-db = { version = "0.49.0", features = ["postgres"], optional = true }
tokio = { version = "1.42.0", features = ["full"], optional = true }
serde_json = { version = "1.0.134", optional = true }
plotly = { version = "0.11.0", features = ["wasm"], optional = true }

# Client dependencies
web-sys = { version = "0.3.76", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys", "dep:serde_json", "dep:plotly"]
server = ["dioxus/server", "dep:axum", "dep:copy_dir", "dep:diesel", "dep:diesel_migrations", "dep:dioxus-cli-config",
    "dep:dotenvy", "dep:reqwest", "dep:rss", "dep:tokio", "dep:serde_json", "dep:plotly"]
shuttle = ["server", "dep:shuttle-axum", "dep:shuttle-runtime", "dep:shuttle-shared-db"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
